--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Remove labels from an issue or a pull request",
   "main": "lib/main.js",
   "scripts": {
-    "build": "tsc && ncc build",
+    "build": "ncc build src/main.ts -o dist",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
@@ -23,18 +23,16 @@
   "author": "The Actions Ecosystem Authors",
   "license": "Apache 2.0",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^3.0.0",
-    "@octokit/rest": "^16.43.1",
+    "@actions/core": "1.10.1",
+    "@actions/github": "6.0.0",
     "semver": "^6.1.1"
   },
   "devDependencies": {
-    "@octokit/webhooks": "^7.4.0",
     "@types/jest": "^24.0.23",
-    "@types/node": "^14.14.25",
+    "@types/node": "22.7.4",
     "@types/semver": "^7.3.4",
     "@typescript-eslint/parser": "^3.1.0",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "0.38.2",
     "eslint": "^7.19.0",
     "eslint-plugin-github": "^2.0.0",
     "eslint-plugin-jest": "^24.1.3",
@@ -44,6 +42,6 @@
     "js-yaml": "^3.14.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
-    "typescript": "^4.1.3"
+    "typescript": "5.6.2"
   }
 }
