--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "ES2023",
     "module": "commonjs",
     "outDir": "./lib",
     "rootDir": "./src",
