--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: Actions Ecosystem Remove Labels
-description: Remove labels to an issue or a pull request.
-author: The Actions Ecosystem Authors
+name: action-remove-labels
+description: Remove labels from an issue or a pull request.
+author: egmacke (forked from The Actions Ecosystem Authors) 
 inputs:
   github_token:
     description: A GitHub token.
